feat: add more sections to Dashboard table of contents

--- a/index.html
+++ b/index.html
@@ -982,6 +982,9 @@
 3. [주요 기능](#주요-기능)
 4. [목적 및 가치](#목적-및-가치)
 5. [사용 방법](#사용-방법)
+6. [🎮 컨트롤 요약](#-컨트롤-요약)
+7. [🔧 기술 스택](#-기술-스택)
+8. [📝 향후 개선 가능 사항](#-향후-개선-가능-사항)
 
 ---
 
