docs: update Dashboard README with current features and file loading method

--- a/index.html
+++ b/index.html
@@ -1011,11 +1011,14 @@
 \`\`\`
 ┌─────────────────────────────────────────────────────────┐
 │  Top Navigation (Dashboard, Manage, Investigate)       │
+│  - Dashboard: 플랫폼 소개 및 사용법 (기본 화면)          │
+│  - Investigate: 3D 시뮬레이션 뷰                        │
 ├──────────┬──────────────────────────────────────────────┤
 │          │                                              │
 │ Sidebar  │         3D Simulation Canvas                │
 │          │      (Three.js 렌더링 영역)                  │
 │ - File   │                                              │
+│   Load   │                                              │
 │ - Stats  │                                              │
 │ - Players│                                              │
 │          │                                              │
@@ -1026,6 +1029,11 @@
 │  └─ Event Log / Aim Trace Visualization                 │
 └─────────────────────────────────────────────────────────┘
 \`\`\`
+
+### 주요 변경사항
+- **파일 선택**: GitHub 저장소에서 CSV 파일을 직접 선택하여 로드
+- **자동 전환**: 파일 로드 완료 시 자동으로 Investigate 탭으로 전환
+- **Dashboard 기본 화면**: 페이지 로드 시 Dashboard가 기본으로 표시됨
 
 ---
 
@@ -1206,31 +1214,34 @@
 
 ## 🚀 사용 방법
 
-### 1. 파일 준비
-- CSV 파일 준비: \`sample_dataset_kill_tick_info.csv\` 형식 준수
+### 1. 플랫폼 접속
+- 웹 브라우저에서 플랫폼에 접속합니다
+- 초기 화면은 **Dashboard** 탭이 기본으로 표시됩니다
 
-### 2. 브라우저에서 실행
-\`\`\`bash
-# 파일 탐색기에서 simulation_enhanced.html 더블클릭
-# 또는
-explorer simulation_enhanced.html
-\`\`\`
+### 2. 데이터 로드
+1. 상단 네비게이션에서 **Investigate** 탭으로 이동
+2. 좌측 사이드바 "File Load" 섹션에서 **"파일 선택"** 버튼 클릭
+3. 팝업에서 GitHub 저장소에 업로드된 CSV 파일 목록 확인
+4. 원하는 리플레이 파일 선택 (자동으로 다운로드 및 처리)
+5. 처리 완료까지 대기 (진행 상황이 표시됨)
+6. 파일 로드 완료 시 자동으로 **Investigate** 탭으로 전환됩니다
 
-### 3. 데이터 로드
-1. 좌측 사이드바 "File Load" 섹션에서 CSV 파일 선택
-2. 처리 완료까지 대기 (진행 상황 콘솔에 표시)
-
-### 4. 시뮬레이션 탐색
+### 3. 시뮬레이션 탐색
 - **3D 시각화**: 캔버스에서 마우스로 카메라 조작
 - **킬 이벤트 선택**: 좌측 상단 Kill Event Picker에서 선택
 - **플레이어 추적**: Players 드롭다운에서 플레이어 선택 후 Follow 활성화
 - **Aim Trace 분석**: 하단 Aim Trace 탭에서 조준 궤적 확인
 
-### 5. 포커스 모드 활용
+### 4. 포커스 모드 활용
 1. 킬 이벤트 선택 (Event Picker 또는 Action Stream)
 2. 자동으로 ±30틱 범위 설정
 3. 재생 버튼으로 해당 구간 반복 재생
 4. Aim Trace에서 공격자의 마우스 이동 패턴 확인
+
+### 5. Dashboard 활용
+- **Dashboard** 탭에서 플랫폼 사용법 및 기능 설명 확인
+- 목차 링크를 클릭하여 해당 섹션으로 바로 이동
+- Investigate 탭에서 목차 링크 클릭 시 자동으로 Dashboard로 전환됩니다
 
 ---
 
