--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS:GO Combat Simulation</title>
+    <title>CRUMB — Combat Replay Unified Monitoring & Behavior-analysis</title>
+    <link rel="icon" type="image/png" href="crumb_logo.png" onerror="this.href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍞</text></svg>'">
     <style>
         * {
             margin: 0;
